# Homer

./: .gitignore  build.sbt
modules/deezer/src/main/native/: CMakeLists.txt
modules/deezer/src/main/native/include/: logger.hpp
modules/deezer/src/main/native/include/jni/: JNIUtils.cpp  JNIUtils.hpp  info_acidflow_homer_modules_music_deezer_jni_DeezerPlayerNative__.cpp  info_acidflow_homer_modules_music_deezer_jni_DeezerPlayerNative__.hpp
modules/deezer/src/main/native/include/jni/callback/: ScalaConnectCallback.cpp  ScalaConnectCallback.hpp  ScalaPlayerCallback.cpp  ScalaPlayerCallback.hpp
modules/deezer/src/main/native/include/player/: DeezerPlayer.cpp  DeezerPlayer.hpp
modules/deezer/src/main/native/include/player/callback/: DeezerConnectCallback.cpp  DeezerConnectCallback.hpp  DeezerPlayerCallback.cpp  DeezerPlayerCallback.hpp
modules/deezer/src/main/native/toolchain/: linux_armv7l.cmake  linux_x86_64.cmake
modules/deezer/src/main/resources/modules/conf/: music_deezer.conf  music_deezer.properties
modules/shared_components/src/main/resources/global/conf/: mqtt.conf  mqtt.properties
modules/shared_components/src/main/scala/info/acidflow/homer/: Constants.scala
modules/shared_components/src/main/scala/info/acidflow/homer/communication/mqtt/: MqttClientConfig.scala  MqttConfigFactory.scala
modules/shared_components/src/main/scala/info/acidflow/homer/model/: IntentInfo.scala  NluResult.scala  Slot.scala  SlotRange.scala  SlotValue.scala  SnipsSayText.scala
modules/shared_components/src/main/scala/info/acidflow/homer/modules/: SnipsClient.scala  SnipsClientModule.scala  SnipsClientTTSListener.scala  SnipsModule.scala  SnipsTTS.scala  TTSAware.scala
modules/shared_components/src/main/scala/info/acidflow/homer/sound/: SoundPlayer.scala
modules/shared_components/src/test/scala/info/acidflow/homer/model/: SlotValueParsingTest.scala
modules/timers/src/main/resources/modules/conf/: timers.conf  timers.local.conf  timers.properties
modules/timers/src/main/scala/info/acidflow/homer/modules/timers/: TimerModuleConfig.scala  TimerModuleConfigFactory.scala  TimersSnipsModule.scala
modules/weather_owm/src/main/resources/modules/conf/: weather_owm.conf  weather_owm.properties
modules/weather_owm/src/main/scala/info/acidflow/homer/modules/weather/: WeatherOwmModuleConfig.scala  WeatherOwmModuleConfigFactory.scala  (+1 more)
project/: BuildSettings.scala  Dependencies.scala  plugins.sbt
src/main/scala/info/acidflow/homer/: Main.scala
(+21 files in other folders)
